[package]
name = "jam"
version = "0.1.0"
edition = "2021"
authors = ["Kittech <kittech@skiff.com>"]
description = "Java Archive Manager"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
